cetacean rmd with rr working

--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -33,8 +33,8 @@ lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), s
 copy_rdata_files() # make sure data files are up to date. 
 #load(here::here("app/data/testData.RData"))
 load(here::here("app/data/OpenData.RData"))
-load(here::here("app/data/OpenData_sardist.RData"))
-load(here::here("app/data/SecureData.RData"))
+#load(here::here("app/data/OpenData_sardist.RData"))
+#load(here::here("app/data/SecureData.RData"))
 
 listed_species <- listed_species[!c(listed_species$`COSEWIC status` == "No Status" & listed_species$`SARA status` == "No Status"), ]
 row.names(listed_species) <- NULL
